argocd/applications/nginx-gateway-fabric-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
